# yugioh_prices_csv

./: Cargo.toml  README.md
examples/: example.csv  example_max_arb.csv  example_max_arb_out.csv  example_min_arb.csv  example_min_arb_out.csv  example_out.csv  time_thief.ydk  time_thief_out.csv  zoodiac_2020.csv  zoodiac_2020_out.csv
src/: lib.rs  main.rs
src/api/: card_info.rs  currency_conversion.rs  get_card_prices.rs  mod.rs
