[package]
name = "yugioh_prices_csv"
version = "0.1.0"
authors = ["Altuz <nicholasmulianto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = { version = "1.1.3" }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.10.3", features = ["json"] }
url = { version = "2.1.1" }
tokio = { version = "0.2", features = ["full"] }
futures = { version = "0.3.5" }
clap = { version = "3.0.0-beta.1" }
percent-encoding = { version = "2.1.0" }